# course_work_parallel_computing

./: .gitignore  CMakeLists.txt  README.md  locustfile.py  ~$рсова_Шаповалов.docx  Курсова_Шаповалов.docx
src/: main.cpp
src/client/: Client.cpp
src/concurrent/: ConcurrentMap.cpp  ConcurrentMap.h
src/index/: InvertedIndex.cpp  InvertedIndex.h
src/server/: SearchServer.cpp  SearchServer.h
src/threading/: ThreadPool.cpp  ThreadPool.h
src/utils/: FileLoader.cpp  FileLoader.h  Tokenizer.cpp  Tokenizer.h
src/web/: package-lock.json  package.json  proxy.js
src/web/public/: app.js  index.html  style.css
